# opteepkcs11fuzzer

./: .gitignore  HARNESS_INFO.txt  README  README.md  test
AFLplusplus/: .gitignore  GNUmakefile  mapfile
AFLplusplus/include/: afl-as.h  config.h  forkserver.h
AFLplusplus/src/: afl-forkserver.c
AFLplusplus/utils/qbdi_mode/: template.cpp
corpus_entries/unique/: 521  522  523  524  525  526  528  529  530  531  532  533  534  535  537  538  539  541  550  551  555  556  557  563  564  565  566  567  568  569  570  571  572  573  574  576  581  582  583  596  (+28 more)
opentee/: .gitignore  Makefile.am  autogen.sh  configure.ac  ltmain.sh
opentee/TAs/: .gitignore  Makefile.am  configure.ac
opentee/TAs/optee_pkcs11_ta/: Makemodule.am
opentee/emulator/: Makefile.am
opentee/emulator/common/: com_protocol.c
opentee/emulator/include/: com_protocol.h
opentee/emulator/internal_api/: tee_crypto_api.h  tee_memory.h  tee_storage_api.h
opentee/emulator/internal_api/crypto/: crypto_digest.c
opentee/emulator/internal_api/storage/: data_stream_api.c
opentee/emulator/launcher/: Makemodule.am  dynamic_loader.c  launcher_mainloop.c  ta_internal_thread.c  ta_process.c
opentee/emulator/manager/: io_thread.c  logic_thread.c  opentee_manager_storage_api.c
opentee/emulator/opentee-main/: main.c
opentee/liboptee_pkcs11/: Makefile.am
opentee/liboptee_pkcs11/include/: ck_debug.h  note.txt  pkcs11.h  pkcs11_ta.h  pkcs11_ta.h.backup  print_functions.h  (+1 more)
opentee/libtee/: Makefile.am
opentee_backup/: configure
opentee_backup/emulator/: configure.ac
opentee_backup/liboptee_pkcs11/: Makefile.am  configure.ac
opentee_backup/liboptee_pkcs11/include/: Makemodule.am  note.txt
opentee_backup/liboptee_pkcs11/src/: Makemodule.am  invoke_ta.h  pkcs11_processing.c  pkcs11_token.c  serialize_ck.h  serializer.h
opentee_backup/libtee/: Makefile.am  configure.ac
opentee_backup/tests/: configure.ac
opentee_backup/tests/pkcs11/: Makemodule.am  pkcs11_test_app.c
(+101 files in other folders)
